# cgdraw

./: .gitattributes  Cargo.toml  README.md  deny.toml
assets/shaders/: shader.wgsl
crates/cgdraw_app/: Cargo.toml
crates/cgdraw_app/src/: app.rs  builder.rs  camera.rs  events.rs  graphics.rs  handler.rs  lib.rs  primitive.rs
crates/cgdraw_app/src/graphics/: mod.rs  primitive.rs  state.rs  step.rs  transform.rs
crates/cgdraw_camera/: Cargo.toml
crates/cgdraw_camera/src/: lib.rs  matrix.rs  projection.rs  state.rs  translate.rs  uniform.rs  uniforms.rs
crates/cgdraw_core/: Cargo.toml
crates/cgdraw_core/src/: lib.rs  window.rs
crates/cgdraw_core/src/color/: mod.rs  srgb.rs
crates/cgdraw_core/src/graphic/: mod.rs  texture.rs  vertex.rs
crates/cgdraw_core/src/keyboard/: keys.rs
crates/cgdraw_core/src/projection/: mod.rs
crates/cgdraw_core/src/uniforms/: camera.rs  mod.rs
crates/cgdraw_math/: Cargo.toml
crates/cgdraw_math/src/: angle.rs  lib.rs  macros.rs  matrix.rs  num.rs  point.rs  translate.rs  vector.rs
crates/cgdraw_render/: Cargo.toml
crates/cgdraw_render/src/: lib.rs  state.rs
crates/cgdraw_render/src/graphic/: draw.rs
crates/cgdraw_render/src/pipeline/: mod.rs
crates/cgdraw_render/src/pipelines/: line.rs
crates/cgdraw_state/: Cargo.toml
crates/cgdraw_state/src/: lib.rs  pipeline.rs
crates/cgdraw_state/src/pipelines/: main.rs
crates/cgdraw_ui/: Cargo.toml
crates/cgdraw_ui/src/: window.rs
examples/1-draw-vertices/: Cargo.toml
examples/1-draw-vertices/src/: main.rs
examples/2-cameras-controller/: Cargo.toml
examples/2-cameras-controller/src/: camera.rs  lib.rs  main.rs
src/: lib.rs  main.rs
