[package]
name = "cgdraw"
version = "0.1.0"
edition = "2021"
categories = ["graphics", "gui", "rendering", "wgpu"]
keywords = ["computer-graphics", "gui", "rendering", "wgpu", "cg", "draw"]
description = "A simple 3D graphics library for Rust"
exclude = []
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/sydo26/cgdraw"
rust-version = "1.69.0"
authors = ["sydo26 <sydoafk@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = [
    "crates/*",
]