[package]
name = "cgdraw_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgdraw_core = { path = "../cgdraw_core", version = "0.1.0" }
cgdraw_ui = { path = "../cgdraw_ui", version = "0.1.0" }
cgdraw_state = { path = "../cgdraw_state", version = "0.1.0" }
cgdraw_render = { path = "../cgdraw_render", version = "0.1.0" }
cgdraw_camera = { path = "../cgdraw_camera", version = "0.1.0" }
cgdraw_math = { path = "../cgdraw_math", version = "0.1.0" }
pollster = "0.3.0"
wgpu = "0.16.0"
cgmath = "0.18.0"
uuid = { version = "1.3.3", features = ["v4"] }