[package]
name = "cgdraw_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = { version = "0.16.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }
palette = "0.7.0"
num-traits = "0.2"
cgdraw_math = { path = "../cgdraw_math", version = "0.1.0" }