[package]
name = "cgdraw_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.16.0" }
cgdraw_core = { path = "../cgdraw_core", version = "0.1.0" }
cgdraw_state = { path = "../cgdraw_state", version = "0.1.0" }
cgdraw_camera = { path = "../cgdraw_camera", version = "0.1.0" }
bytemuck = { version = "1.13.1", features = ["derive"] }