[package]
name = "cgdraw_state"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"
wgpu = { version = "0.16.0" }
winit = { version = "0.28.6" }
cgdraw_camera = { path = "../cgdraw_camera", version = "0.1.0" }
cgdraw_core = { path = "../cgdraw_core", version = "0.1.0" }