[package]
name = "cgdraw_ui"
version = "0.1.0"
edition = "2021"
description = "A simple UI for cgdraw lib"
license = "MIT OR Apache-2.0"
repository = "https://github.com/sydo26/cgdraw"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = { version = "0.16.0" }
winit = { version = "0.28.6" }
cgdraw_core = { path = "../cgdraw_core", version = "0.1.0" }
